--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <script src="app.js"></script>
+    <script src="myApp.js"></script>
 </body>
 </html>
